@@ -104,6 +104,7 @@ Usage(FILE *f, int bstcMode)
     fprintf(f, "  [ --lmm=xxx ]      use alternate LMM implementation for P1\n");
     fprintf(f, "           xxx = orig uses original flexspin LMM\n");
     fprintf(f, "           xxx = slow uses traditional (slow) LMM\n");
+    fprintf(f, "  [ --nostdlib]      skip searching in the standard library location for include files\n");
     fprintf(f, "  [ --tabs=N ]       assume tabs are set every N spaces for indentation purposes\n");
     fprintf(f, "  [ --verbose ]      print additional diagnostic messages\n");
     fprintf(f, "  [ --version ]      just show compiler version\n");
@@ -296,6 +297,9 @@ main(int argc, const char **argv)
             argv++; --argc;
         } else if (!strcmp(argv[0], "--nocolor")) {
             gl_colorize_output = false;
+            argv++; --argc;
+        } else if (!strcmp(argv[0], "--nostdlib")) {
+            gl_nostdlib = 1;
             argv++; --argc;
         } else if (!strcmp(argv[0], "--verbose")) {
             gl_verbosity = 1;
@@ -514,6 +518,11 @@ main(int argc, const char **argv)
         }
     }
 
+    // add default path, if applicable
+    if (!gl_nostdlib) {
+        pp_add_to_path(&gl_pp, DefaultIncludeDir());
+    }
+    
     if (optimizeDefault) {
         if (cmd->outputBytecode) {
             gl_optimize_flags = DEFAULT_BYTECODE_OPTS;
